2007-10-03  Thomas H.P. Andersen  <phomes@gmail.com>

	* game.c: Show highscore and new/quit option even when score is not good
	enough to enter the highscore. Fixes bug #466667

2007-10-02  Thomas H.P. Andersen  <phomes@gmail.com>

	* gnobots.c: Fix typo in score-category nightmare with super safe moves.
	Fixes bug #482188

2007-09-04  Thomas H.P. Andersen  <phomes@gmail.com>

	* properties.c: Add prototype to load_keys() function. Fix from 
	Damien Carbery. Fixes bug #473327

2007-09-02  Thomas H.P. Andersen  <phomes@gmail.com>

	* menu.c: Make the toolbar not have focus as default.
	Fixes bug #451372

2007-09-02  Thomas H.P. Andersen  <phomes@gmail.com>

	* properties.c: Apply new keys when closing preferences window.
	Fixes bug #449656 

2007-07-28  Andreas Røsdal  <andreasr@gnome.org>

	* menu.c: Apply "view toolbar" property on startup. Patch from
	Ferenc Gerlits in bug #451360.

2007-07-13  Thomas H.P. Andersen  <phomes@gmail.com>

	* game.c: Don't enter endless loop when there are no safe teleport locations
	Patch from Ferenc Gerlits in bug #438829.

2007-06-27  Thomas H.P. Andersen  <phomes@gmail.com>

	* properties.c:
	* gnobots2.schemas.in: Change default keys to non-numlock values (Bug #392584)

2007-06-26  Thomas H.P. Andersen  <phomes@gmail.com>

	* game.c: Don't use klotski as game name in high score list

2007-02-03  Andreas Røsdal  <andreasr@gnome.org>

	* gnobots2/graphics.c
	* gnobots.c
	* gnobots.h
	* menu.c
	* game.c
	* game.h
	* properties.c: Migrate gnobots to new high scores API.
	Patch from Thomas Andersen in bug #316360.

2007-02-03  Andreas Røsdal  <andreasr@gnome.org>

	* properties.c: Cheating was possible while the preferences dialog
	is open. Patch from Thomas Andersen in Bug #403421.

2007-02-02  Robert Ancell  <robert.ancell@gmail.com>

	* gnobots2.schemas.in: Change key owners from glines to gnobots2 (Bug #403426)

2006-10-28  Andreas Røsdal  <andrearo@stud.ntnu.no>
